# bindle

./: README.md  pyproject.toml
src/bindle/: __main__.py  extensions.py  pandas_extensions.py  stats.py  utils.py
src/bindle/cli/: __init__.py
tests/: test_api.py
